--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             
             <div>
                 <div class="heading">
-                    <h3 >GUEST</h3>
+                    <h3 >AWAY</h3> <!--Changed from Guest to Away to test GitHub tracking-->
                 </div>
                 <div class = "scoreBox">
                     <p id="guestScore">0</p>
